samples/_failures_safe/1761504303_4e3074_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9a35bf7.c: In function ‘main’:
./samples/SAFE/__tmp_d9a35bf7.c:184:5: error: expected expression at end of input
  184 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_d9a35bf7.c:184:5: error: expected declaration or statement at end of input
